feat: course page
