# src/domains/global/entities/user/model/user.type.ts
@@ -1,15 +1,0 @@
-export enum UserRole {
-  ADMIN = 'admin',
-  STUDENT = 'student',
-}
-
-export interface User {
-  id: string;
-  first_name: string;
-  last_name: string;
-  patronymic: string;
-  email: string;
-  phone: string;
-  join_date: string;
-  role: `${UserRole}`;
-}
